# fieldcraft

./: .gitignore  AGENTS.md  CLAUDE.md  DECISIONS.md  DEPENDENCIES.md  DESKTOP-TESTING.md  NEXT.md  PLAN.md  README.md  package.json  pnpm-lock.yaml
apps/editor/: index.html  package.json  tsconfig.json  vite.config.ts
apps/editor/src/: board-viewport.ts  commands.ts  design-tokens.test.ts  design-tokens.ts  desktop-automation.ts  example-scenarios.test.ts  history.ts  main.ts  scenario.test.ts  scenario.ts  spatial.ts  storage.ts  styles.css
apps/editor/src-tauri/: Cargo.toml  tauri.conf.json
apps/editor/src-tauri/capabilities/: default.json
apps/editor/src-tauri/icons/: icon.icns
apps/editor/src-tauri/src/: lib.rs  main.rs
apps/editor/src/runtime-export/: browser-runtime.css  browser-runtime.js
apps/editor/src/scenario-migrations/: identity.test.ts  identity.ts  index.test.ts  index.ts  v0-to-v1.ts  (+11 more)
apps/editor/test-fixtures/: README.md
docs/: EDITOR-V1-SCOPE.md  RUNTIME-VISION.md  V1-RELEASE-NOTES.md  doc-audit-2026-04.md
docs/redesign/: BRIEF.md
docs/redesign/reference/: FieldCraft Redesign.html  README.md
docs/superpowers/plans/: 2026-04-18-scenario-format-hardening.md
docs/superpowers/specs/: 2026-04-18-scenario-format-hardening-design.md
examples/v1/: README.md  bridgehead-square.fieldcraft.json  convoy-free-coordinate.fieldcraft.json  ridgeline-hex.fieldcraft.json
scripts/: desktop-debug.mjs  desktop-dev.mjs  doctor.mjs  generate-marker-fixtures.mjs  process-utils.mjs  start.mjs  stop.mjs  test-browser-smoke.mjs  test-desktop-smoke.mjs
(+17 files in other folders)
