[package]
name = "fieldcraft"
version = "0.1.0"
description = "Fieldcraft editor shell"
authors = ["Fieldcraft contributors"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "fieldcraft_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
